syntax = "proto3";

package hello;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply);
    rpc SayGoodbye(HelloRequest) returns (HelloReply);
    rpc SayFullname(FullnameHelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message FullnameHelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloReply {
    string message = 1;
}